<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/settings_button" />

    <TextView
        android:id="@+id/jumbotronTestResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_tests"
        android:textAlignment="center"
        android:textSize="100sp" />

    <LinearLayout
        android:id="@+id/waterDoctorLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/runTestsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="mockTestsRun"
            android:text="@string/runTests" />

        <ListView
            android:id="@+id/testsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/viewMapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToMapActivity"
            android:text="@string/view_map" />
    </LinearLayout>
</LinearLayout>