<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PHTestDetailsActivity">

    <ImageView
        android:id="@+id/faqImageView"
        android:layout_width="40dp"
        android:layout_height="29dp"
        android:layout_marginTop="8sp"
        android:onClick="goToFAQ"
        app:srcCompat="@drawable/faq_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pHTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ph_sensor"
            android:textAlignment="center"
            android:textSize="72sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/yourPHValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ph_value"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/pHNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ph_scale" />

    <Button
        android:id="@+id/pHCalibrateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calibrate" />

</LinearLayout>